iOS Safari: normalize datepicker internals to stop picker button overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -539,19 +539,40 @@ button.primary {
     max-width: -webkit-fill-available;
     /* Keep native iOS date text vertically centered in the field. */
     min-height: 2.7rem;
+    height: 2.7rem;
+    overflow: hidden;
+    padding-left: 0.7rem;
+    padding-right: 0.7rem;
     padding-top: 0;
     padding-bottom: 0;
     line-height: 2.7rem;
+  }
+
+  input[type='date']::-webkit-datetime-edit-fields-wrapper {
+    padding: 0;
   }
 
   input[type='date']::-webkit-date-and-time-value {
     line-height: 2.7rem;
+    padding: 0;
+    margin: 0;
   }
 
   input[type='date']::-webkit-datetime-edit {
     line-height: 2.7rem;
+    padding-left: 0;
+    padding-right: 0;
     padding-top: 0;
     padding-bottom: 0;
+  }
+
+  input[type='date']::-webkit-calendar-picker-indicator {
+    margin: 0;
+    padding: 0;
+    width: 1.1em;
+    min-width: 1.1em;
+    max-width: 1.1em;
+    height: 1.1em;
   }
 }
 
